# pydrobert-kaldi

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  MANIFSET.in  Makefile  README.md  README.rst  appveyor.yml  build.sh  conda_build_config.yaml  meta.yaml  pyproject.toml  pytest.ini  requirements.txt  run_test.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  build_wheels.yml  tox.yml
doc/source/: conf.py  index.rst  modules.rst  pydrobert.kaldi.eval.rst  pydrobert.kaldi.feat.rst  pydrobert.kaldi.io.rst  pydrobert.kaldi.rst  pydrobert.rst
docs/: Makefile  cli_helper.py  requirements.txt
docs/source/: cli.rst  conf.py  index.rst  locale.rst  modules.rst  pydrobert.kaldi.command_line.rst  pydrobert.kaldi.eval.rst  pydrobert.kaldi.eval.util.rst  pydrobert.kaldi.io.argparse.rst  pydrobert.kaldi.io.corpus.rst  pydrobert.kaldi.io.duck_streams.rst  pydrobert.kaldi.io.enums.rst  pydrobert.kaldi.io.rst  pydrobert.kaldi.io.table_streams.rst  pydrobert.kaldi.io.util.rst  (+1 more)
pydrobert/: __init__.py
recipe/: anaconda_deploy.sh  bld.bat  build.sh  build_conda.sh  build_conda_docker.sh  build_manylinux.sh  build_osx.sh  ci_build.yaml  ci_py2_deploy.yaml  ci_py3_deploy.yaml  cibw_before_all_linux.sh  cibw_before_all_manylinux.sh  cibw_before_all_osx.sh  cibw_before_all_win.ps1  cibw_before_build_manylinux.sh  cibw_before_build_osx.sh  cibw_before_build_win.ps1  cibw_before_requirements.txt  conda_build_config.yaml  copy_conda_build_packages.py  meta.yaml  run_test.sh  sdist.sh  test_manylinux.sh  test_osx.sh  travis_deploy.sh  travis_py2_conda_build_config.yaml  travis_py3_conda_build_config.yaml
tests/: .test_metadata.py.un~  test_matrices.py  test_metadata.py  test_tables.py  test_vectors.py
(+118 files in other folders)
