[build-system]
requires = [
  "setuptools>=45",
  "wheel",
  "setuptools_scm>=6.2",
  "oldest-supported-numpy; python_version<'3.9'",
  "numpy>=1.25; python_version>='3.9'", # https://numpy.org/devdocs/dev/depending_on_numpy.html#build-time-dependency
  "swig"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pydrobert/kaldi/_version.py"