[metadata]
name = pydrobert-kaldi
description = Python wrapper for Kaldi
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files =
  LICENSE
  COPYING_Kaldi_Project
url = https://github.com/sdrobert/pydrobert-kaldi
project_urls =
  Documentation = https://pydrobert-kaldi.readthedocs.io
author = Sean Robertson
author_email = sdrobert@cs.toronto.edu
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find_namespace:
package_dir =
  = src
python_requires = >= 3.7
install_requires =
  numpy

[options.entry_points]
console_scripts =
  write-table-to-pickle = pydrobert.kaldi.command_line:write_table_to_pickle
  write-pickle-to-table = pydrobert.kaldi.command_line:write_pickle_to_table
  compute-error-rate = pydrobert.kaldi.command_line: compute_error_rate
  normalize-feat-lens = pydrobert.kaldi.command_line: normalize_feat_lens
  write-table-to-torch-dir = pydrobert.kaldi.command_line:write_table_to_torch_dir [pytorch]
  write-torch-dir-to-table = pydrobert.kaldi.command_line:write_torch_dir_to_table [pytorch]

[options.extras_require]
pytorch = torch

[options.packages.find]
where = src
